# mcp-app

./: .gitignore  CONTRIBUTING.md  FLEET.md  OPERATIONS.md  README.md  pyproject.toml
.gemini/: settings.json
docs/: app-development.md  custom-middleware.md
mcp_app/: __init__.py  admin.py  admin_client.py  admin_tools.py  app.py  bootstrap.py  bridge.py  cli.py  context.py  models.py  registration.py  store.py  verifier.py
mcp_app/middleware/: __init__.py  jwt.py
mcp_app/testing/: __init__.py  audit.py  fixtures.py
mcp_app/testing/contracts/: __init__.py
mcp_app/testing/health/: __init__.py
mcp_app/testing/http/: __init__.py  test_health.py
mcp_app/testing/iam/: __init__.py  test_admin_errors.py  test_admin_local.py  test_auth_enforcement.py
mcp_app/testing/tools/: __init__.py  test_sdk_coverage_audit.py
mcp_app/testing/wiring/: __init__.py  test_app_wiring.py
skills/author-mcp-app/: SKILL.md
skills/mcp-app-admin/: SKILL.md
tests/framework/: conftest.py  test_framework.py
tests/framework/fixture_app/: __init__.py  tools.py
tests/tck/: test_contracts.py
tests/unit/: test_admin_client.py  test_app.py  test_bootstrap.py  test_middleware.py  test_probe_register.py
